Add discount validation adapter

--- a/ms-book-service/app/src/main/resources/application.yaml
+++ b/ms-book-service/app/src/main/resources/application.yaml
@@ -12,3 +12,8 @@ spring:
     console:
       enabled: true
       path: "/h2"
+
+adapter:
+  restconsumer:
+    timeout: 5000
+    discount-url: https://622271e2666291106a26a17c.mockapi.io/discount/v1/new
