--- a/ms-book-service/build.gradle
+++ b/ms-book-service/build.gradle
@@ -81,6 +81,7 @@ sonarqube {
         property "sonar.junit.reportsPath", ""
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.exclusions", "**/model/**,**/config/**,**/metrics/**,**/app/**,**/test/**"
     }
 }
 
