--- a/ms-book-service/app/build.gradle
+++ b/ms-book-service/app/build.gradle
@@ -32,5 +32,5 @@ bootJar {
 }
 
 tasks.withType(Jar) {
-    destinationDir = file("$rootDir/../deployment")
+    destinationDir = file("$rootDir/build")
 }
