--- a/ms-book-service/app/build.gradle
+++ b/ms-book-service/app/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'io.projectreactor.addons:reactor-extra'
 
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
 }
 
